fix: Update tooltip text styling for consistency and readability

--- a/clients/lunalogic/inogen/ign006/src/experiment.scss
+++ b/clients/lunalogic/inogen/ign006/src/experiment.scss
@@ -107,9 +107,10 @@
   }
 
   .#{$id}__text {
-    font-size: 0.875rem !important;
+    font-size: 14px !important;
     font-style: italic;
     margin: 10px 0 !important;
     padding: 0 !important;
+    color: #000 !important;
   }
 }
